@@ -9,6 +9,7 @@ Broker:
   Closes #1956.
 - Fix local bridges being disconnected on SIGHUP. Closes #1942.
 - Fix slow initial bridge connections for WITH_ADNS=no.
+- Fix persistence_location not appending a '/'.
 
 Clients:
 - Fix mosquitto_sub being unable to terminate with Ctrl-C if a successful
